sema/testdata/fail/case_not_constant.c
int main(void) {
    int x;
    switch (x) {
        case x + 1: return 0;
    }
}
